# QCustomUI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  QCustomUi.pro  QCustomUi.sln  README.en.md  README.md  UiPreview.md
src/: CMakeLists.txt
src/Designer/: CMakeLists.txt  CircleProgressBar.cpp  CircleProgressBar.h  ClassifyTreeView.cpp  ClassifyTreeView.h  ComboBox.cpp  ComboBox.h  EditLabel.cpp  EditLabel.h  HexLineEdit.cpp  HexLineEdit.h  IPAddressEdit.cpp  IPAddressEdit.h  LongLongSpinBox.cpp  LongLongSpinBox.h  MultiComboBox.cpp  MultiComboBox.h  MultiPageButtonBox.cpp  MultiPageButtonBox.h  QCustomUiWidgets.cpp  QCustomUiWidgets.h  RecentView.cpp  RecentView.h  SelectionButtonBox.cpp  SelectionButtonBox.h  SerialPortComboBox.cpp  SerialPortComboBox.h  StageProgressBar.cpp  StageProgressBar.h  SwitchButton.cpp  SwitchButton.h  TableView.cpp  TableView.h  ULongLongSpinBox.cpp  ULongLongSpinBox.h
src/EditActivity/: EditActivity.cpp  EditActivity.h  EditActivity.pri  EditActivity.pro  EditActivity.vcxproj  EditActivity.vcxproj.filters  OperationTree.cpp  OperationTree.h  OperationTree.ui  ProjectTree.cpp  ProjectTree.h  ProjectTree.ui  editactivity_global.h
src/Examples/: CMakeLists.txt
src/Examples/CircleProgressBarExample/: CMakeLists.txt  CircleProgressBarExample.cpp  CircleProgressBarExample.h  main.cpp
src/Examples/ClassifyTreeViewExample/: ClassifyTreeViewExample.cpp  ClassifyTreeViewExample.h  ClassifyTreeViewExample.qrc  ClassifyTreeViewExample.vcxproj  ClassifyTreeViewExample.vcxproj.filters  main.cpp
src/Examples/DigitKeyboardExample/: DigitKeyboardExample.cpp  DigitKeyboardExample.h  main.cpp
src/Examples/DisplayWidgetExamples/: DisplayWidgetExamples.cpp  DisplayWidgetExamples.h  DisplayWidgetExamples.pri  DisplayWidgetExamples.pro  DisplayWidgetExamples.qrc  DisplayWidgetExamples.vcxproj  DisplayWidgetExamples.vcxproj.filters  main.cpp
src/Examples/DrawerExample/: DrawerExample.cpp  DrawerExample.h  DrawerExample.qrc  DrawerExample.vcxproj  DrawerExample.vcxproj.filters  main.cpp
src/Examples/EditLabelExample/: CMakeLists.txt  EditLabelExample.cpp  EditLabelExample.h  EditLabelExample.qrc  EditLabelExample.ui  EditLabelExample.vcxproj  EditLabelExample.vcxproj.filters  main.cpp
src/Examples/FlowChartExample/: CMakeLists.txt  FlowChartExample.cpp  FlowChartExample.h  main.cpp
src/Examples/HexLineEditExample/: HexLineEditExample.cpp  HexLineEditExample.h  main.cpp
src/Examples/IDNExample/: CMakeLists.txt  main.cpp
src/Examples/IDNTest/: CMakeLists.txt  main.cpp
src/Examples/IPAddressEditExample/: CMakeLists.txt  IPAddressEditExample.cpp  IPAddressEditExample.h  IPAddressEditExample.qrc  IPAddressEditExample.ui  IPAddressEditExample.vcxproj  IPAddressEditExample.vcxproj.filters  main.cpp
src/Examples/InputDialogExample/: InputDialogExample.cpp  InputDialogExample.h  InputDialogExample.ui  main.cpp
src/Examples/InputExamples/: InputExamples.cpp  InputExamples.h  InputExamples.pri  InputExamples.pro  InputExamples.qrc  InputExamples.vcxproj  InputExamples.vcxproj.filters  main.cpp
src/Examples/ListDevices/: CMakeLists.txt  main.cpp
src/Examples/ListDevicesExample/: CMakeLists.txt  main.cpp
src/Examples/LoadingExample/: LoadingExample.cpp  LoadingExample.h  LoadingExample.qrc  LoadingExample.vcxproj  LoadingExample.vcxproj.filters  main.cpp
src/Examples/LogExample/: CMakeLists.txt  LogExample.cpp  LogExample.h  main.cpp
src/Examples/LongLongSpinBoxExample/: LongLongSpinBoxExample.cpp  LongLongSpinBoxExample.h  main.cpp
src/Examples/MessageBoxExample/: MessageBoxExample.cpp  MessageBoxExample.h  MessageBoxExample.qrc  MessageBoxExample.ui  MessageBoxExample.vcxproj  MessageBoxExample.vcxproj.filters  main.cpp
src/MainPageActivity/: MainPageActivity.cpp  MainPageActivity.h  MainPageActivity.pri  MainPageActivity.pro  MainPageActivity.vcxproj  MainPageActivity.vcxproj.filters  StyleWidget.cpp  StyleWidget.h  StyleWidget.ui  mainpageactivity_global.h
src/OpenVisa/: Address.h  AsciiArray.h  Attribute.cpp  Attribute.h  AutoLink.h  BinaryArray.h  CMakeLists.txt  CommonCommand.cpp  CommonCommand.h  Flags.h  IDN.h  Object.cpp  Object.h  ObjectAdapter.h  OpenVisa.rc  RCa13724  SerialPortInfo.h  StatusByteRegister.h  Utils.cpp  Utils.h  Version.h  VisaException.h  openvisa_global.h  resource.h
src/QCustomUi/: CMakeLists.txt  QCtmAbstractChartView.cpp  QCtmAbstractChartView.h  QCtmAbstractDockPanel.cpp  QCtmAbstractDockPanel.h  QCtmAbstractLegend.cpp  QCtmAbstractLegend.h  QCtmAbstractLogModel.cpp  QCtmAbstractLogModel.h  QCtmAbstractMessageModel.cpp  QCtmAbstractMessageModel.h  QCtmAbstractMessageTipModel.cpp  QCtmAbstractMessageTipModel.h  QCtmAbstractMessageTipView.cpp  QCtmAbstractMessageTipView.h  QCtmAbstractMessageView.cpp  QCtmAbstractMessageView.h  QCtmAbstractMultiPageItemModel.cpp  QCtmAbstractMultiPageItemModel.h  QCtmAbstractMultiPageTableModel.cpp  QCtmAbstractMultiPageTableModel.h  QCtmAbstractSeries.cpp  QCtmAbstractSeries.h  QCtmApplication.cpp  QCtmApplication.h  QCtmChartBoxLayout.cpp  QCtmChartBoxLayout.h  QCtmChartHBoxLayout.h  QCtmChartItem.cpp  QCtmChartItem.h  QCtmChartLayer.cpp  QCtmChartLayer.h  QCtmChartLayout.cpp  QCtmChartLayout.h  QCtmChartOverlayLayout.cpp  QCtmChartOverlayLayout.h  QCtmChartVBoxLayout.h  QCtmCircleProgressBar.cpp  QCtmCircleProgressBar.h  QCtmClassifyTreeDelegate.h  (+174 more)
src/QCustomUiDoc/: QCustomUi.qdocconf  QCustomUiDoc.vcxproj  QCustomUiDoc.vcxproj.filters  QtWidgetsClass.ui
src/SwitchLauncher/: ActivityManager.cpp  ActivityManager.h  AtomLauncherApplication.h  Launcher.cpp  Launcher.h  SWApplication.cpp  SWApplication.h  SWContext.cpp  SWContext.h  SWPluginInterface.h  SwitchLauncher.pri  SwitchLauncher.pro  SwitchLauncher.qrc  SwitchLauncher.rc  SwitchLauncher.vcxproj  SwitchLauncher.vcxproj.filters  Version.h  resource.h  switchlauncher_global.h  switchlauncher_zh.qm  switchlauncher_zh.ts
src/SwitchLauncherExample/: SwitchLauncherExample.pri  SwitchLauncherExample.pro  SwitchLauncherExample.vcxproj  SwitchLauncherExample.vcxproj.filters  main.cpp
src/Tests/: CMakeLists.txt
(+402 files in other folders)
