include(${PROJECT_SOURCE_DIR}/cmake/Example.cmake)

add_subdirectory(ClassifyTreeViewExample)
add_subdirectory(DrawerExample)
add_subdirectory(EditLabelExample)
add_subdirectory(IPAddressEditExample)
add_subdirectory(LoadingExample)
add_subdirectory(MessageBoxExample)
add_subdirectory(MultiComboBoxExample)
add_subdirectory(NavigationBarExample)
add_subdirectory(NavigationPaneExample)
add_subdirectory(StageProgressBarExample)
add_subdirectory(WindowAndDialogExamples)
add_subdirectory(MessageTipExample)
add_subdirectory(InputDialogExample)
add_subdirectory(ToolBoxExample)
add_subdirectory(PathBrowserExample)
add_subdirectory(DigitKeyboardExample)
add_subdirectory(SwitchButtonExample)
add_subdirectory(CircleProgressBarExample)
add_subdirectory(MultiPageViewExample)
add_subdirectory(RecentViewExample)
add_subdirectory(SelectionButtonBoxExample)
if (NOT ${BUILD_STATIC})
    add_subdirectory(LongLongSpinBoxExample)
    add_subdirectory(ULongLongSpinBoxExample)
endif()
add_subdirectory(HexLineEditExample)
add_subdirectory(SerialPortComboBoxExample)
add_subdirectory(TitleBarStyleSheetExample)
add_subdirectory(LogExample)
add_subdirectory(RangeSliderExample)